# nv-redfish

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
bmc-http/: Cargo.toml  build.rs
bmc-http/benches/: cache.rs
bmc-http/src/: cache.rs  credentials.rs  lib.rs  reqwest.rs
bmc-http/tests/: common.rs  etag_cache_tests.rs  event_stream_tests.rs  reqwest_client_tests.rs
bmc-mock/: Cargo.toml
bmc-mock/src/: expect.rs  lib.rs
core/: Cargo.toml
core/src/: action.rs  bmc.rs  deserialize.rs  dynamic_properties.rs  edm_duration.rs  edm_primitive_type.rs  http.rs  lib.rs  nav_property.rs  odata.rs  upload.rs
core/tests/: common.rs  etag_cache_tests.rs  reqwest_client_tests.rs
csdl-compiler/: Cargo.toml
csdl-compiler/examples/: schema-compilation.rs
csdl-compiler/src/: commands.rs  edmx.rs  error.rs  features_manifest.rs  lib.rs  main.rs  one_or_collection.rs
csdl-compiler/src/compiler/: action.rs  compiled.rs  compiled_properties.rs  complex_type.rs  context.rs  entity_type.rs  enum_type.rs  error.rs  mod.rs  namespace.rs  odata.rs  properties.rs  qualified_name.rs  redfish.rs  schema_index.rs  simple_type.rs  stack.rs  (+2 more)
csdl-compiler/tests/: test-redfish-schema-parser.rs  test-schema-compilation.rs
dispatcher/: Cargo.toml
dispatcher/benches/: scheduler.rs
dispatcher/src/: runtime.rs
dispatcher/tests/: op_scaling.rs  simulation.rs
docs/scraper/: architecture.md  phase_0.md  redfish-adapter.md  requirements.md  runtime.md  rust-style-guide.md  scheduling-root.md  scheduling-target.md  scheduling.md
examples/explore-with-dummy-bmc/: Cargo.toml
examples/explore-with-reqwest-bmc/: Cargo.toml
examples/readme-minimal/: Cargo.toml
examples/redfish-oem-contoso/: Cargo.toml  build.rs
examples/redfish-std/: Cargo.toml  build.rs
examples/scraper-cli/: Cargo.toml
examples/scraper-cli/src/: main.rs
examples/scraper-health-projection/: Cargo.toml
examples/scraper-health-projection/src/: lib.rs
examples/task-service/: Cargo.toml
examples/task-service/src/: main.rs
lib/: Cargo.toml
lib/src/: bmc.rs  edm_duration.rs  http.rs  lib.rs  nav_property.rs  odata_id.rs
redfish/: Cargo.toml  build.rs  features.toml
redfish/src/: assembly.rs  bmc.rs  bmc_quirks.rs  error.rs  ethernet_interface.rs  ethernet_interfaces.rs  hardware_id.rs  host_interface.rs  lib.rs  mac_address.rs  network_device_function.rs  pcie_device.rs  power_equipment.rs  resource.rs  schema.rs  sensor.rs  sensors.rs  service_root.rs
scraper/: Cargo.toml
scraper/src/: builder.rs  capacity.rs  discovery.rs  error.rs  event.rs  generator.rs  ids.rs  lib.rs  output.rs  predicate.rs  query.rs  raw.rs  relation.rs  resources.rs  runtime.rs  scheduler.rs  snapshot.rs  store.rs  tests.rs
scraper/src/discovery/: firmware_logs.rs  standard_sensors.rs
scraper/src/query/: demand.rs  reconcile.rs  subscription.rs  watch.rs
scraper/src/scheduler/: adaptive.rs  fair.rs  flat_rr.rs  mod.rs
scraper/src/tests/: basics.rs  discovery.rs  query.rs  relations.rs  scheduler.rs  store_events.rs  subscription.rs
scraper/tests/: phase_0.rs
tests/: Cargo.toml  build.rs
tests/src/: base.rs  bmc.rs  error.rs  expect.rs  json_merge.rs  lib.rs
tests/tests/: test-assembly-wiwynn-missing-odata-type.rs  test-bios.rs  test-chassis-oem-nvidia-baseboard.rs  test-chassis.rs  test-computer-system-oem-lenovo.rs  test-computer-system.rs  test-manager-oem-dell-attributes.rs  test-manager-oem-hpe.rs  test-manager-oem-lenovo.rs  test-manager-oem-supermicro.rs  test-manager.rs  test-task-service.rs  test-update-service.rs  tests-account-service.rs  tests-base-operations.rs
(+136 files in other folders)
