#

[workspace]
members = [
   "csdl-compiler"
]

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/NVIDIA/nv-redfish"
readme = "README.md"
edition = "2018"
keywords = ["rust", "redfish", "bmc"]
categories = ["hardware-support"]
documentation = "TBD"

[workspace.dependencies]
