[package]
name = "redfish-std"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
nv-redfish = { path = "../../lib" }

[build-dependencies]
glob = { workspace = true }
csdl-compiler = { path = "../../csdl-compiler" }
