[package]
name = "scraper-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
nv-redfish = { workspace = true, features = [
    "bmc-http",
    "chassis",
    "computer-systems",
    "log-services",
    "managers",
    "sensors",
    "update-service",
] }
nv-redfish-core = { workspace = true }
nv-redfish-scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
url = { workspace = true }
