[package]
name = "task-service"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
nv-redfish = { workspace = true, features = ["bmc-http", "task-service"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
url = { workspace = true }
